--- a/Projects.html
+++ b/Projects.html
@@ -82,7 +82,7 @@
 								Experimental triumphs followed, with the magnetic hyperthermia potential of HA-IONPs reaching temperatures of 48°C under RF exposure, inducing a remarkable 26% greater cytotoxicity compared to controls. 
 								Practical contributions extended to testing HA-IONPs in a tissue-mimicking phantom, evaluating the efficacy of hyperthermia applications and making strides in medical research.</p>
 
-								<div class="image main"><img src="\images\Poster presentation_DPRC_Dr. AKN.jpg" alt="" /></div>
+								<div class="image main"><img src="images\Poster presentation_DPRC_Dr. AKN.jpg" alt="" /></div>
 
 						</section>
 
@@ -103,18 +103,8 @@
 								
 								<p>This chapter not only enriched diagnostic capabilities but also paved the way for swift image acquisition and streamlined analysis processes, leaving an indelible mark on the landscape of bioimaging.</p>
 
-								<div class="image main"><img src="\images\Minor_Project_1.png" alt="" /></div>
+								<div class="image main"><img src="images\Minor_Project_1.png" alt="" /></div>
 						</section>
-
-
-
-
-
-<!-- • Created a three-dimensional model of the femur bone from DICOM files obtained from a CT scan.
-• Imported the model into ANSYS, a finite element code, to perform stress analysis.
-• Analyzed the results of the stress analysis to identify areas of high-stress concentration. -->
-
-
 
 
 					<!-- Post -->
