--- a/Projects.html
+++ b/Projects.html
@@ -103,7 +103,10 @@
 								
 								<p>This chapter not only enriched diagnostic capabilities but also paved the way for swift image acquisition and streamlined analysis processes, leaving an indelible mark on the landscape of bioimaging.</p>
 
-								<div class="image main"><img src="images/Minor_Project_1.png" alt="" /></div>
+								<div class="image main"><img src="images/Minor_Project_1.png" alt="Imaging the Sample with different wavelengths of light using Device on Board
+									with a wavelength of 365nm. C) Red Light with a wavelength of 610-760nm. D) Green
+									F) Yellow Light with a wavelength of 570-590nm." /></div>
+
 						</section>
 
 
