--- a/Projects.html
+++ b/Projects.html
@@ -82,8 +82,8 @@
 							<section>
 								<header>
 									<!-- <span class="date"> February 2023 – April 2023 </span> -->
-									<h2>Classification of chest diseases <br />
-										 using <br />
+									<h2>Classification of chest diseases
+										 using 
 										NIH chest X-ray dataset</h2>
 
 										<h4>February 2023 – April 2023</h4>
