--- a/Resume.html
+++ b/Resume.html
@@ -80,7 +80,7 @@
 						<header>
 
 							<div style="display: flex; justify-content: space-between;">
-							<h3 style="display: inline-block;">Bachelor of Technology in Electronics & Communication Engineering with Specialization in Biomedical Engineering</h3>
+							<h3 style="display: inline-block;">Bachelor of Technology in Electronics & Communication <br> Engineering with Specialization in Biomedical Engineering</h3>
 							<h5 style="display: inline-block;">May 2022</h5>
 							</div>
 						
