--- a/Resume.html
+++ b/Resume.html
@@ -104,7 +104,7 @@
 								<!-- Experiece 1 -->
 								<header>
 									<div style="display: flex; justify-content: space-between;">
-										<h3>Research Assistant</h3>
+										<h3>Associate Researcher</h3>
 										<h5 style="display: inline-block;"><span class="align-right">August 2023 – Present</span></h5>
 									</div>
 									<div style="display: flex; justify-content: space-between;">
