--- a/Professional_Experience.html
+++ b/Professional_Experience.html
@@ -56,7 +56,7 @@
 					  
 						  <header>
 							<div style="display: flex; justify-content: space-between;">
-							  <h2>Research Assistant</h2>
+							  <h2>Associate Researcher</h2>
 							  <h5 style="display: inline-block;"><span class="align-right">August 2023 – Present</span></h5>
 							</div>
 							<div style="display: flex; justify-content: space-between;">
@@ -64,7 +64,7 @@
 							  <h6 style="display: inline-block;">Tempe, AZ</h6>
 							</div>
 						  </header>
-						  <p>In the heart of Tempe, Arizona, my journey took an exciting turn as a Research Assistant at Adidas. Here, I delved into the intricate world of human behavior, analyzing nuances across physical, emotional, and cognitive domains using multi-faceted biometric data. My role extended beyond analysis; I became a pioneer in research initiatives, leveraging sensor-derived data and human perception to propel product development and innovation. Each day brought new challenges, pushing the boundaries of what was known in the field.</p>
+						  <p>In the heart of Tempe, Arizona, my journey took an exciting turn as a Associate Researcher at Adidas. Here, I delved into the intricate world of human behavior, analyzing nuances across physical, emotional, and cognitive domains using multi-faceted biometric data. My role extended beyond analysis; I became a pioneer in research initiatives, leveraging sensor-derived data and human perception to propel product development and innovation. Each day brought new challenges, pushing the boundaries of what was known in the field.</p>
 						  <hr />
 					  
 						  <header>
