--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 							</section> -->
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">vbcrbharath@gmail.com</a></p>
+								<p><a href="#">bharath.vbcr@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
