--- a/Professional_Experience.html
+++ b/Professional_Experience.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Bharath Chandra</title>
@@ -64,7 +60,10 @@
 							  <h6 style="display: inline-block;">Tempe, AZ</h6>
 							</div>
 						  </header>
-						  <p>In the heart of Tempe, Arizona, my journey took an exciting turn as a Associate Researcher at Adidas. Here, I delved into the intricate world of human behavior, analyzing nuances across physical, emotional, and cognitive domains using multi-faceted biometric data. My role extended beyond analysis; I became a pioneer in research initiatives, leveraging sensor-derived data and human perception to propel product development and innovation. Each day brought new challenges, pushing the boundaries of what was known in the field.</p>
+						  <p>In the heart of Tempe, Arizona, my journey took an exciting turn as a Associate Researcher at Adidas. 
+							Here, I delved into the intricate world of human behavior, analyzing nuances across physical, emotional, and cognitive domains using multi-faceted biometric data. 
+							My role extended beyond analysis; I became a pioneer in research initiatives, leveraging sensor-derived data and human perception to propel product development and innovation. 
+							Each day brought new challenges, pushing the boundaries of what was known in the field.</p>
 						  <hr />
 					  
 						  <header>
@@ -77,7 +76,10 @@
 							  <h6 style="display: inline-block;">Tirupati, India</h6>
 							</div>
 						  </header>
-						  <p>Venturing into the realm of healthcare, I embarked on an internship at SVIMS Hospital in Tirupati, India. Here, I became a proactive problem-solver, minimizing downtime and maximizing the lifespan of critical equipment through thorough diagnostics and effective repairs. As a guardian of equipment health, I provided unwavering support and training to healthcare staff, ensuring seamless utilization. The installation of new equipment and meticulous steering setup, calibration, and performance testing procedures became second nature.</p>
+						  <p>Venturing into the realm of healthcare, I embarked on an internship at SVIMS Hospital in Tirupati, India. 
+							Here, I became a proactive problem-solver, minimizing downtime and maximizing the lifespan of critical equipment through thorough diagnostics and effective repairs. 
+							As a guardian of equipment health, I provided unwavering support and training to healthcare staff, ensuring seamless utilization. 
+							The installation of new equipment and meticulous steering setup, calibration, and performance testing procedures became second nature.</p>
 						  <hr />
 					  
 						  <header>
@@ -117,56 +119,6 @@
 			<li><a href="Projects.html" class="button icon solid solo fa-arrow-right scrolly">Continue</a></li>
 		</ul>
 	</div>
-
-				<!-- Footer
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1215 East Vista Del Cerro Drive<br />
-								Tempe, AZ - 85281</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(602) 582-5517</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">bharath.vbcr@gmail.com</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/bharath-vbcr/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/bharathvbcr" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>								</ul>
-							</section>
-						</section>
-					</footer>
-
-
-
-			</div> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
